; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_status.c_open_directory.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_status.c_open_directory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dir_baton = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i8*, i32, i32*, i8**)* @open_directory to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @open_directory(i8* %0, i8* %1, i32 %2, i32* %3, i8** %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i8**, align 8
  %11 = alloca %struct.dir_baton*, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  store i8** %4, i8*** %10, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = bitcast i8* %12 to %struct.dir_baton*
  store %struct.dir_baton* %13, %struct.dir_baton** %11, align 8
  %14 = load i8**, i8*** %10, align 8
  %15 = load i8*, i8** %6, align 8
  %16 = load %struct.dir_baton*, %struct.dir_baton** %11, align 8
  %17 = getelementptr inbounds %struct.dir_baton, %struct.dir_baton* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.dir_baton*, %struct.dir_baton** %11, align 8
  %20 = load i32*, i32** %9, align 8
  %21 = call i32* @make_dir_baton(i8** %14, i8* %15, i32 %18, %struct.dir_baton* %19, i32* %20)
  ret i32* %21
}

declare dso_local i32* @make_dir_baton(i8**, i8*, i32, %struct.dir_baton*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
